--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   percent_indicator: ^2.1.1+1
   page_transition: ^1.1.5
   mime_type: ^0.2.4
+  device_info: ^0.4.1+4
 #  path_provider: ^1.4.0
 
 dev_dependencies:
