--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   thumbnails: ^1.0.1
   path_provider: ^1.4.0
   fluttertoast: ^3.1.3
+  permission_handler: ^4.2.0+hotfix.1
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
