--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   fluttertoast: ^3.1.3
   permission_handler: ^4.2.0+hotfix.1
   intl: ^0.16.1
+  open_file: ^3.0.1
 
 dev_dependencies:
   flutter_test:
