--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   mime_type: ^0.2.4
   device_info: ^0.4.1+4
   path: ^1.6.4
-#  thumbnails: ^1.0.1
   path_provider: ^1.4.0
   fluttertoast: ^3.1.3
   permission_handler: ^4.2.0+hotfix.1
@@ -36,6 +35,7 @@ dependencies:
   open_file: ^3.0.1
   device_apps: ^1.0.9
   video_player: ^0.10.2+5
+  image: ^2.1.14
 #  ssh: ^0.0.5
 #  tftp: ^1.0.1
 
