--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,20 +21,19 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   provider: ^4.0.1
-  shared_preferences: ^0.5.4+5
-  flutter_icons: ^1.0.0+1
-  percent_indicator: ^2.1.1+1
-  page_transition: ^1.1.5
-  mime_type: ^0.2.4
-  device_info: ^0.4.1+4
-  path: ^1.6.4
+  shared_preferences: ^0.5.12+4
+  flutter_icons: ^1.1.0
+  percent_indicator: ^2.1.9+1
+  mime_type: ^0.3.2
+  device_info: ^1.0.0
+  path: ^1.7.0
 #  thumbnails: ^1.0.1
-  path_provider: ^1.4.0
-  fluttertoast: ^3.1.3
-  permission_handler: ^4.2.0+hotfix.1
+  path_provider: ^1.6.27
+  fluttertoast: ^7.1.6
+  permission_handler: ^5.1.0+2
   intl: ^0.16.1
-  open_file: ^3.0.1
-  device_apps: ^1.0.9
+  open_file: ^3.0.3
+  device_apps: ^1.2.0
   video_player: ^0.10.2+5
 #  ssh: ^0.0.5
 #  tftp: ^1.0.1
