--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,27 +14,28 @@ description: A new Flutter application.
 version: 1.0.3+3
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
-  provider: ^4.0.1
+  cupertino_icons: ^1.0.3
+  provider: ^5.0.0
   shared_preferences: ^2.0.4
-  flutter_icons: ^1.1.0
-  percent_indicator: ^2.1.9+1
-  mime_type: ^0.3.2
-  device_info: ^1.0.0
+  flutter_icons:
+    git: git@github.com:jibiel/flutter-icons.git
+  percent_indicator: ^3.0.1
+  mime_type: ^1.0.0
+  device_info: ^2.0.2
   path: ^1.7.0
 #  thumbnails: ^1.0.1
   path_provider: ^2.0.1
-  fluttertoast: ^7.1.6
-  permission_handler: ^5.1.0+2
-  intl: ^0.16.1
+  fluttertoast: ^8.0.7
+  permission_handler: ^8.1.3
+  intl: ^0.17.0
   open_file: ^3.0.3
-  device_apps: ^1.2.0
-  video_player: ^0.10.2+5
+  device_apps: ^2.1.1
+  video_player: ^2.1.10
   isolate_handler: ^1.0.0
 #  ssh: ^0.0.5
 #  tftp: ^1.0.1
