--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,25 +20,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.3
-  provider: ^5.0.0
+  provider: ^6.0.3
   shared_preferences: ^2.0.4
   flutter_icons:
     git: git@github.com:jibiel/flutter-icons.git
-  percent_indicator: ^3.0.1
+  percent_indicator: ^4.2.2
   mime_type: ^1.0.0
   device_info: ^2.0.2
   path: ^1.7.0
 #  thumbnails: ^1.0.1
   path_provider: ^2.0.1
-  fluttertoast: ^8.0.7
-  permission_handler: ^8.1.3
+  fluttertoast: ^8.0.9
+  permission_handler: ^9.2.0
   intl: ^0.17.0
-  open_file: ^3.0.3
-  device_apps: ^2.1.1
+  open_file: ^3.2.1
+  device_apps: ^2.2.0
   video_player: ^2.1.10
   isolate_handler: ^1.0.0
-#  ssh: ^0.0.5
-#  tftp: ^1.0.1
+
+dependency_overrides:
+  platform: ^3.1.0
 
 dev_dependencies:
   flutter_test:
